--- a/cleone/Contact-Us.html
+++ b/cleone/Contact-Us.html
@@ -47,15 +47,16 @@
             </div>
         </div>
     </header>
+        <div class="aboutContainer">
+        <div class="bredCrumbs">
+            <a href="#">Home / </a>
+            <span>FAQ's</span>
+            <h2 class="pageheadingss">Contact Us</h2>
+        </div> 
+   </div>
     <section>
         <div class="container">
             <div class="page-directry page-directry1">
-                <ul>
-                    <li> <a href="#"> Home </a></li>
-                    <li>/</li>
-                    <li> <a href="#"> Contact Us </a></li>
-                </ul>
-                <h2>Contact Us</h2>
                 <div class="In-touch">
                     <div class="email">
                         <h1>Email Us</h1>
